--- a/index.css
+++ b/index.css
@@ -96,6 +96,7 @@ a.button:hover {
     width: 24.99999%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     margin: 1%;
+    border-radius: 0.3em;
 }
 
 @media only screen and (max-width: 1200px) {
@@ -112,8 +113,10 @@ a.button:hover {
     }
 }
 
-img {
-    width: 100%
+section >img {
+    width: 100%;
+    border-top-left-radius: 0.3em;
+    border-top-right-radius: 0.3em;
 }
 
 article {
