--- a/style/main_article.css
+++ b/style/main_article.css
@@ -44,3 +44,12 @@ section>section {
 p {
     word-wrap: break-word;
 }
+
+div {
+    flex-basis: 100%;
+}
+
+div>button {
+    float: right;
+    margin-right: 15%;
+}
