--- a/style/main_article.css
+++ b/style/main_article.css
@@ -53,3 +53,8 @@ div>button {
     float: right;
     margin-right: 15%;
 }
+
+article>section>img {
+    object-fit: cover;
+    max-height: 16rem;
+}
