--- a/style/main_header.css
+++ b/style/main_header.css
@@ -42,10 +42,14 @@ a.button:hover {
 }
 
 .tabcontent {
-    animation: transi_fondu 0.5s;
+    animation: transi_fondu 1s;
 }
 
 @keyframes transi_fondu {
-    from {opacity: 0;}
-    to {opacity: 1;}
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
