--- a/style/index.css
+++ b/style/index.css
@@ -1,5 +1,6 @@
 html {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    z-index: 0;
 }
 
 body {
