--- a/style/main_article.css
+++ b/style/main_article.css
@@ -22,7 +22,8 @@ section>img {
     border-top-left-radius: 0.3em;
     border-top-right-radius: 0.3em;
     object-fit: cover;
-    max-height: 16rem;
+    max-height: 15rem;
+    min-height: 15rem;
 }
 
 section>section {
