--- a/style/ecole_article.css
+++ b/style/ecole_article.css
@@ -57,3 +57,23 @@ div>button {
     float: right;
     margin-right: 15%;
 }
+
+#ScrollBack {
+    display: none;
+    position: fixed;
+    bottom: 20px; /* Place the button at the bottom of the page */
+    right: 30px; /* Place the button 30px from the right */
+    z-index: 99; /* Make sure it does not overlap */
+    border: none; /* Remove borders */
+    outline: none; /* Remove outline */
+    background-color: rgb(15, 123, 231); /* Set a background color */
+    color: white; /* Text color */
+    cursor: pointer; /* Add a mouse pointer on hover */
+    padding: 15px; /* Some padding */
+    border-radius: 10px; /* Rounded corners */
+    font-size: 18px; /* Increase font size */
+}
+  
+#ScrollBack:hover {
+    background-color: #555; /* Add a dark-grey background on hover */
+}
